remove all the crazyness

--- a/res_recmole/index.html
+++ b/res_recmole/index.html
@@ -24,6 +24,12 @@
         <button class="start-button" id="start-button" onclick="start()">进入游戏</button>
         <iframe class="flash_content" frameBorder="0" id="flash_content"></iframe>
     </div>
+    <p>更新日志：<br/>
+        2018-12-29 <br/>
+        · 为了防止进入页面后卡顿，改为点击按钮后开始游戏<br/>
+        · 添加实时文件计数器<br/>
+        · 更改样式，使用css、javascript<br/>
+    </p>
     <p class="about-text">
             关于 RecMole 项目：<a href>http://github.com/Miigon/RecMole</a><br/>
             QQ群：620562227<br/>
